# pykrman

./: LICENSE  README.md  pyproject.toml  setup.py
src/pykrman/: compare.py  defaultlist.py  names.py  pdfbox.py  pykrfy.py  schema.py  util.py
tests/: test_pdfs.py
