[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'pykrman'
version = '0.0.2'
module = 'pykrman'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' },
]
readme = 'README.md'
description = 'Python Intelligent Character Recognition Manager for extracting text from various images/pdfs, running Tesseract as appropriate.'
home-page = 'https://github.com/dcronkite/pykrman'
dependencies = [
    'pytesseract',
    'PyPDF2',
    'pillow',
    'PyYAML',
    'jsonschema',
    'pdfminer.six',
]
requires-python = '>=3.8'
keywords = ['nlp', 'information extraction']
classifiers = [# https://pypi.org/classifiers/
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
dev = ['pytest', 'requests']

[project.scripts]
pykrfy = "pykrman.pykrfy:main"
